RESOLVED FIXED50963
REGRESSION(r73385): Scrolling nested iframes is fubar
https://bugs.webkit.org/show_bug.cgi?id=50963
Summary REGRESSION(r73385): Scrolling nested iframes is fubar
Dimitri Glazkov (Google)
Reported 2010-12-13 13:33:50 PST
Created attachment 76426 [details] Test case Attaching the test case. To reproduce: Scroll the outer frame first, then attempt wheel-scrolling the inner frame. Expected: everything looks hunky-dory. Actual: inner frame scrolls partially, looks not hunky-dory at all.
Attachments
Test case (1.97 KB, text/html)
2010-12-13 13:33 PST, Dimitri Glazkov (Google)
no flags
Patch (3.34 KB, patch)
2010-12-13 14:27 PST, Dave Hyatt
sam: review+
Dave Hyatt
Comment 1 2010-12-13 14:27:25 PST
Dave Hyatt
Comment 2 2010-12-13 15:05:45 PST
Fixed in r73972.
Note You need to log in before you can comment on or make changes to this bug.