https://bugs.webkit.org/show_bug.cgi?id=50963

Reviewed by Sam Weinig.

REGRESSION: Scrolling nested iframes is messed up on platforms that use the cross-platform ScrollView.

The selfClipRect and childrenClipRect methods of RenderLayer were incorrectly relying on the bounding box
of the root layer.  This bounding box was only coincidentally incorporating overflow as part of the
RenderLayer's bounds.  Since I fixed the RenderLayer bounds to not include layout overflow any longer,
this check is now exposed as incorrect.  Use the entire document size  when computing layer clip
rects.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::childrenClipRect):
(WebCore::RenderLayer::selfClipRect):
* rendering/RenderView.h:
(WebCore::RenderView::documentRect):



Canonical link: https://commits.webkit.org/64323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73972 268f45cc-cd09-0410-ab3c-d52691b4dbfc